overflow fix (lapsus :)

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,12 @@
 body {
   width: 100%;
-  height: 100vh;
   background: rgb(86,181,133);
   background: linear-gradient(35deg, rgba(86,181,133,1) 0%, rgba(0,158,226,1) 100%);
   background-image: url(../img/ozadje_11.svg);
   background-position: left center;
   background-repeat: no-repeat;
   background-size: cover;
-  overflow:hidden;
+  
 
 }
 
